<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.geogr.sportevents.EventViewActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/eventPadding">

            <TextView
                android:layout_weight="0.3"
                android:textSize="@dimen/standartEventActivityTextSize"
                android:id="@+id/activity_eventtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defaultType"/>

            <TextView
                android:layout_weight="0.3"
                android:textSize="@dimen/adrssSize"
                android:id="@+id/activity_eventdatetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/defaultType"/>

        </LinearLayout>
        <fragment
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:name="com.google.android.gms.maps.MapFragment"
            android:id="@+id/activity_eventmapView"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/listMargin">
                <TextView
                    android:background="@drawable/rounded"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/plusminustextsize"
                    android:gravity="center"
                    android:id="@+id/plus"
                    android:layout_gravity="right"
                    android:text="@string/plus"
                    android:layout_marginRight="30dp"
                    android:textColor="@color/vk_white"
                    android:padding="@dimen/eventPadding"
                   />
            <TextView
                        android:layout_width="70dp"
                        android:id="@+id/minus"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/plusminustextsize"
                        android:gravity="center"
                        android:layout_gravity="right"
                        android:text="@string/minus"
                        android:background="@drawable/rounded"
                        android:textColor="@color/vk_white"
                        android:padding="@dimen/eventPadding"
                       />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/standartEventActivityTextSize"
            android:id="@+id/activity_eventadress"
            android:padding="@dimen/eventPadding"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eventCreator"
                android:padding="@dimen/eventPadding"
                android:textSize="@dimen/standartEventActivityTextSize"/>

            <ImageView
                android:id="@+id/vkbutton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/vkicon" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/eventPadding"
            android:id="@+id/activity_eventphoneNumber"
            android:textSize="@dimen/descriptionTextSize" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/standartEventActivityTextSize"
            android:id="@+id/activity_eventpeopleamount"
            android:padding="@dimen/eventPadding"/>

        <TextView
            android:id="@+id/activity_eventpeopledescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/eventPadding"
            android:textSize="@dimen/descriptionTextSize"
           />

           <!-- <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/russia"
                android:id="@+id/rss"/>-->
    </LinearLayout>

</ScrollView>
